python-istio-canary-01/k8s/gateway-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-app-gateway
  namespace: istio-test
spec:
  selector:
    # Use the default istio ingress gateway
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
