python-istio-canary-01/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-app-gateway
  namespace: istio-test
spec:
  selector:
    istio: ingress # make sure this matches your Istio ingress gateway service
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "exp8.osl.team" # Replace with your domain
    tls:
      mode: SIMPLE
      credentialName: python-app-cert # matches the secret name in istio-system
