python-istio-canary-01/k8s/Weighted-Routing-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-app-vs
  namespace: istio-test
spec:
  hosts:
  - "*" # Same as in Gateway
  gateways:
  - python-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: python-app-service
        subset: v1
      weight: 80
    - destination:
        host: python-app-service
        subset: v2
      weight: 20
