python-istio-canary-01/k8s/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-app-gateway
  namespace: istio-test
spec:
  selector:
    # Use the default istio ingress gateway
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Accepts traffic for any host
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python-app-dr
  namespace: istio-test
spec:
  host: python-app-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-app-vs
  namespace: istio-test
spec:
  hosts:
  - "*"
  gateways:
  - python-app-gateway
  http:
  - route:
    - destination:
        host: python-app-service
        subset: v1
      weight: 80
    - destination:
        host: python-app-service
        subset: v2
      weight: 20
